scenarios/02-traffic-routing/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: traffic-routing
  labels: 
    scenario: "02-traffic-routing"
spec: 
    selector: 
      istio: ingressgateway
    servers: 
    - port: 
        number: 80
        name: http 
        protocol: HTTP
      hosts: 
      - "*" 
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: 
  name: productpage-gateway
  namespace: traffic-routing
  labels: 
    scenario: "02-traffic-routing" 
spec: 
    hosts: 
    - "*"
    gateway: 
    - bookinfo-gateway
    http: 
    - match: 
      - uri: 
          prefix: /
      route: 
      - destination: 
          host: productpage
          port: 
            number: 9080
